# bitspend-client

./: Cargo.toml  README.md
client-test/: Cargo.toml  build.rs  docker-compose.yml  makefile  test-runner.sh
client-test/src/: balance.rs  bitcoind.rs  client.rs  main.rs  test.rs
crates/signer/: Cargo.toml
crates/signer/src/: bindings.rs  errors.rs  lib.rs  simple_signer.rs
crates/signer/wit/: world.wit
crates/wallet/: Cargo.toml
crates/wallet/src/: bindings.rs  coin_selection.rs  lib.rs  types.rs  watch_wallet.rs
crates/wallet/wit/: world.wit
node/: Cargo.toml
node/src/: bindings.rs  chain.rs  db.rs  lib.rs  node.rs  p2p.rs
node/src/messages/: tx.rs  witness.rs
node/src/util/: mod.rs  network_const.rs  result.rs
node/wit/: world.wit
